[metadata]
name = ratex
version = 0.0.1
author = Your Name
author_email = Your Email
description = Package Description
long_description = file: README.md
long_description_content_type = text/markdown
url = Your Package Github URL
project_urls =
    Bug Tracker = Github URL /issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
